[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-hardening-audit-toolkit"
version = "0.1.0"
description = "Linux security baseline audit toolkit"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lhat = "lhat.cli:main"

[tool.setuptools.packages.find]
include = ["lhat*"]
exclude = ["reports*", "profiles*", "tests*", "docs*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
